[NAE-2072] Workspaces - remove logged user from method inputs - update ElasticViewPermissionService to inject workspace filter